images: Fix image animations for images with specific loop count.

For an image with a repetition count of n, it should animate for
n+1 loops. But the compositor only performs n loops. Fix this by
specifying the actual repetition count of PaintImage.

R=chrishtr@chromium.org

Bug: 815038
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I450d435ed38a3beba30276fa4dbabdcb5a68a944
Reviewed-on: https://chromium-review.googlesource.com/934968
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Commit-Queue: Khushal <khushalsagar@chromium.org>
Cr-Commit-Position: refs/heads/master@{#539238}
Former-commit-id: 644b058c04c5a38e758f07832323f104c12443ad